2.81/2.82 Resizing bone length to 0 gets it irreversibly stuck to that size #71609

Closed
opened 2019-11-15 14:41:00 +01:00 by Vas · 5 comments

System Information
Operating system: Windows-10-10.0.14393 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-14 23:23, hash: 96ce32dca6
Worked: 2.80 (the bone Length box wasn't implemented here)

Short description of error
Resizing bone length on sidebar in Edit mode to 0, makes it "disappear" and get stuck to that size, even though in armature info, it still exists.
Its not exactly irreversible either, if you manually move tail/head position, bone will re-appears, but this can cause some major confusion to users that did this by accident and ruin a rig later down the line
2019-11-15 13-30-27.mp4
Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

  • create an Armature
  • go into edit mode
  • on sidebar, drag length to 0
  • the bone is gone
**System Information** Operating system: Windows-10-10.0.14393 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-14 23:23, hash: `96ce32dca6` Worked: 2.80 (the bone Length box wasn't implemented here) **Short description of error** Resizing bone length on sidebar in Edit mode to 0, makes it "disappear" and get stuck to that size, even though in armature info, it still exists. Its not exactly irreversible either, if you manually move tail/head position, bone will re-appears, but this can cause some major confusion to users that did this by accident and ruin a rig later down the line [2019-11-15 13-30-27.mp4](https://archive.blender.org/developer/F8091036/2019-11-15_13-30-27.mp4) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] - create an Armature - go into edit mode - on sidebar, drag length to 0 - the bone is gone
Author

Added subscriber: @Alumx

Added subscriber: @Alumx

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Since the inclusion of this property (3b0e182f), the normalize function has never had a zero length check.

A simple solution would be to create an arbitrary value for this case:

diff --git a/source/blender/makesrna/intern/rna_armature.c b/source/blender/makesrna/intern/rna_armature.c
index 4dc383a2460..0d99b13a5a0 100644
--- a/source/blender/makesrna/intern/rna_armature.c
+++ b/source/blender/makesrna/intern/rna_armature.c
@@ -497,7 +497,11 @@ static void rna_EditBone_length_set(PointerRNA *ptr, float length)
   float delta[3];
 
   sub_v3_v3v3(delta, ebone->tail, ebone->head);
-  normalize_v3(delta);
+  if (normalize_v3(delta) == 0.0f) {
+    /* Bone with zero length.
+     * Choose any direction to avoid getting stuck. */
+    delta[2] = 1.0f;
+  }
   madd_v3_v3v3fl(ebone->tail, ebone->head, delta, length);
 }
 
Since the inclusion of this property (3b0e182f), the normalize function has never had a zero length check. A simple solution would be to create an arbitrary value for this case: ``` diff --git a/source/blender/makesrna/intern/rna_armature.c b/source/blender/makesrna/intern/rna_armature.c index 4dc383a2460..0d99b13a5a0 100644 --- a/source/blender/makesrna/intern/rna_armature.c +++ b/source/blender/makesrna/intern/rna_armature.c @@ -497,7 +497,11 @@ static void rna_EditBone_length_set(PointerRNA *ptr, float length) float delta[3]; sub_v3_v3v3(delta, ebone->tail, ebone->head); - normalize_v3(delta); + if (normalize_v3(delta) == 0.0f) { + /* Bone with zero length. + * Choose any direction to avoid getting stuck. */ + delta[2] = 1.0f; + } madd_v3_v3v3fl(ebone->tail, ebone->head, delta, length); } ```

This issue was referenced by e71fe924c5

This issue was referenced by e71fe924c558f7115ac9cdd41d7c4668bc15d308

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2019-12-10 14:02:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71609
No description provided.